--- a/css/styles.css
+++ b/css/styles.css
@@ -561,3 +561,161 @@ img {
 .footer-team-icons{
     fill: #f4f4fd;
 }
+
+.backdrop{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #2E2F4266;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    
+}
+
+.modal{
+    width: 408px;
+    height: 584px;
+    background-color: #FCFCFC;
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 24px;
+}
+
+.modal-btn-icon{
+    fill: #2E2F42;
+    
+    
+}
+
+.modal-btn{
+    background-color: #E7E9FC;
+    border: none;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    border-radius: 9999px; border: 1px rgba(0, 0, 0, 0.10) solid;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+
+.modal-title{
+    padding-top: 48px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+.modal-input{
+    color: rgba(46, 47, 66, 0.40);
+    font-size: 12px;
+    width: 100%;
+    height: 40px;
+    padding-left: 38px;
+    border-radius: 4px; 
+    border: 1px #2E2F4266 solid;
+    background-color: inherit;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+
+.modal-input:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-input:focus + .modal-icon{
+    fill: #4D5AE5;
+}
+
+.label-text{
+    color: #8E8F99;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.48px;
+    
+}
+
+.modal-label{
+    
+    margin-bottom: 4px;
+    
+}
+
+.modal-input-wrap{
+    position: relative;
+}
+
+.modal-icon{
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: #2E2F42;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field{
+    margin-bottom: 8px;
+    
+}
+
+.modal-text{
+    color: rgba(46, 47, 66, 0.40);
+    font-size: 12px;
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    border-radius: 4px; 
+    border: 1px #2E2F4266 solid;
+    background-color: inherit;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    resize: none;
+}
+
+.modal-text:focus{
+    border-color: #4D5AE5;
+}
+
+.is-open{
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.modal-send-btn{
+    background-color: #4D5AE5;
+    display: block;
+    font-family: inherit;
+    position: absolute;
+    min-width: 169px;
+    height: 56px;
+    left: 119px;
+    bottom: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+}
+
+.modal-send-btn:hover, .modal-send-btn:focus{
+    background-color: #404BBF;
+}
+
+.btn-txt{
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    
+}
