--- a/css/styles.css
+++ b/css/styles.css
@@ -633,9 +633,6 @@ img {
 }
 
 
-
-
-
 .btn-icon{
     fill: #FFFFFF;
     margin-left: 16px;
@@ -651,19 +648,27 @@ img {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: 
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
 .modal{
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     background-color: #FCFCFC;
     border-radius: 4px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 
+    0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 1px 3px rgba(0, 0, 0, 0.12), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
     padding: 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn-icon{
