--- a/css/styles.css
+++ b/css/styles.css
@@ -739,7 +739,9 @@ img {
 }
 
 .modal-label{
-    
+    display: block;
+    color: rgba(46, 47, 66, 0.40);
+    font-size: 12px;
     margin-bottom: 4px;
     
 }
@@ -759,6 +761,7 @@ img {
 
 .modal-field{
     margin-bottom: 8px;
+    position: relative;
     
 }
 
