--- a/css/styles.css
+++ b/css/styles.css
@@ -667,41 +667,52 @@ img {
     0px 1px 1px rgba(0, 0, 0, 0.14), 
     0px 1px 3px rgba(0, 0, 0, 0.12), 
     0px 2px 1px rgba(0, 0, 0, 0.2);
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn-icon{
     fill: #2E2F42;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
 .modal-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
     background-color: #E7E9FC;
     border: none;
     width: 24px;
     height: 24px;
     padding: 0;
-    border-radius: 9999px; border: 1px rgba(0, 0, 0, 0.10) solid;
+    border-radius: 50%; 
+    border: 1px rgba(0, 0, 0, 0.10) solid;
     position: absolute;
     top: 24px;
     right: 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn:hover{
+.modal-btn:hover, .modal-btn:focus{
     background-color: #404BBF;
     border: none;
 }
 
+
+.modal-btn:hover > .modal-btn-icon, 
 .modal-btn:hover > .modal-btn-icon{
     fill: #FFFFFF;
 }
 
 
 .modal-title{
-    padding-top: 48px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
     width: 100%;
     text-align: center;
     margin-bottom: 16px;
@@ -740,14 +751,17 @@ img {
 
 .modal-label{
     display: block;
-    color: rgba(46, 47, 66, 0.40);
+    color: #8e8f99;
     font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     margin-bottom: 4px;
     
 }
 
 .modal-input-wrap{
     position: relative;
+    margin-bottom: 16px
 }
 
 .modal-icon{
@@ -756,18 +770,18 @@ img {
     top: 50%;
     transform: translateY(-50%);
     fill: #2E2F42;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-field{
-    margin-bottom: 8px;
     position: relative;
-    
 }
 
 .modal-text{
     color: rgba(46, 47, 66, 0.40);
     font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     width: 100%;
     height: 120px;
     padding: 8px 16px;
@@ -789,35 +803,6 @@ img {
     pointer-events: auto;
 }
 
-.modal-send-btn{
-    background-color: #4D5AE5;
-    display: block;
-    font-family: inherit;
-    position: absolute;
-    min-width: 169px;
-    height: 56px;
-    left: 119px;
-    bottom: 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-}
-
-.modal-send-btn:hover, .modal-send-btn:focus{
-    background-color: #404BBF;
-}
-
-.btn-txt{
-    color: white;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    
-}
-
 .check-input{
     
 }
@@ -836,12 +821,14 @@ img {
 .check-text a {
     color: #4D5AE5;
     text-decoration: underline;
+    letter-spacing: 0.04em;
     margin-left: 8px;
     position: relative;
 }
 
 .check-text span{
     display: flex;
+    justify-content: center;
     align-items: center;
     width: 16px;
     height: 16px;
@@ -849,10 +836,14 @@ img {
     fill: transparent;
     border-radius: 2px; 
     border: 1px rgba(46, 47, 66, 0.40) solid;
+    transition: 
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check-icon{
-    transform: translateX(30%);
+    
 }
 
 .check-input:checked + .check-text span{
@@ -861,4 +852,32 @@ img {
     border: none;
 }
 
+.privacy-policy{
+    color: #4d5ae5;
+    ;
+}
 
+.modal-send-btn{
+    background-color: #4D5AE5;
+    display: block;
+    font-family: inherit;
+    position: absolute;
+    min-width: 169px;
+    height: 56px;
+    left: 119px;
+    bottom: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    font-size: 16px;
+}
+
+.modal-send-btn:hover, .modal-send-btn:focus{
+    background-color: #404BBF;
+}
