--- a/css/styles.css
+++ b/css/styles.css
@@ -669,6 +669,7 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
     padding: 72px 24px 24px 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 8px;
 }
 
 .modal-btn-icon{
@@ -814,7 +815,7 @@ img {
     color: #8E8F99;
     font-size: 12px;
     line-height: 1.17;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.04em;
     
 }
 
@@ -880,4 +881,8 @@ img {
 
 .modal-send-btn:hover, .modal-send-btn:focus{
     background-color: #404BBF;
+}
+
+.span{
+    display: flex;
 }
