--- a/css/styles.css
+++ b/css/styles.css
@@ -720,6 +720,7 @@ img {
 }
 
 .modal-input{
+    display: block;
     color: rgba(46, 47, 66, 0.40);
     font-size: 12px;
     width: 100%;
@@ -776,6 +777,7 @@ img {
 
 .modal-field{
     position: relative;
+    margin-bottom: 8px;
 }
 
 .modal-text{
@@ -888,6 +890,6 @@ img {
 }
 
 .modal-check{
-    margin-bottom: 16px
+    margin-bottom: 24px
 
 }
