--- a/css/styles.css
+++ b/css/styles.css
@@ -830,7 +830,7 @@ img {
 }
 
 .check-text span{
-    display: inline-flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 16px;
@@ -890,6 +890,6 @@ img {
 }
 
 .modal-check{
-    margin-bottom: 16px
+    margin-bottom: 24px
 
 }
