--- a/css/styles.css
+++ b/css/styles.css
@@ -862,7 +862,7 @@ img {
 
 .modal-send-btn{
     background-color: #4D5AE5;
-    display: block;
+    display: inline-flex;
     font-family: inherit;
     position: absolute;
     min-width: 169px;
