--- a/css/styles.css
+++ b/css/styles.css
@@ -830,7 +830,7 @@ img {
 }
 
 .check-text span{
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 16px;
@@ -862,7 +862,7 @@ img {
 
 .modal-send-btn{
     background-color: #4D5AE5;
-    display: inline-flex;
+    display: block;
     font-family: inherit;
     position: absolute;
     min-width: 169px;
